# FDVIM

./: .gitignore  CMakeLists.txt  Cursor.h  CursorOp.cpp  CursorOp.h  EditScreen.cpp  EditScreen.h  Editor.cpp  Editor.h  EditorScreen.cpp  EditorScreen.h  GoodbyeScreen.cpp  GoodbyeScreen.h  History.cpp  History.h  InsertTxt.cpp  InsertTxt.h  LICENSE  Makefile  NormalTxt.cpp  NormalTxt.h  README.md  Screen.cpp  Screen.h  Txt.cpp  Txt.h  WelcomeScreen.cpp  WelcomeScreen.h  build.bat  fdvim.cpp
assets/: 1.txt  2.txt  3.txt  UML.drawio
file/: 1.txt  2.txt
include/: CursorOp.h  Editor.h  EditorScreen.h  GoodbyeScreen.h  InsertTxt.h  NormalTxt.h  Screen.h  Txt.h  WelcomeScreen.h
include/Screen/: WelcomeScreen.h
include/Txt/: Txt.h
include/Util/: History.h
lib/: CMakeLists.txt
lib/Editor/: CMakeLists.txt  Editor.cpp
lib/Screen/: CMakeLists.txt  GoodbyeScreen.cpp
lib/Txt/: CMakeLists.txt  InsertTxt.cpp  NormalTxt.cpp  Txt.cpp
lib/Util/: CMakeLists.txt  Cursor.cpp
src/: CursorOp.cpp  Editor.cpp  EditorScreen.cpp  GoodbyeScreen.cpp  InsertTxt.cpp  NormalTxt.cpp  Screen.cpp  Txt.cpp  WelcomeScreen.cpp  main.cpp
tools/: CMakeLists.txt
